--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="col-xl p-0">
-          <img id="image_1" src="img_34.jpg" class="img-thumbnail" alt="...">
+          <img id="image_1" src="img_34.png" class="img-thumbnail" alt="...">
         </div>
       </div>
 
